created sign in api and using json web token

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO = 'mongodb+srv://kgs-url-shortener:kgs-url-shortener@kgsurlshortener.6cpp1hf.mongodb.net/kgsurlshortener?retryWrites=true&w=majority'
+JWT_SECRET = 'kjshaiuifeskjuyiuehkjskjskh'
